<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1025</width>
    <height>687</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QWidget" name="previewWidget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QSplitter" name="streamSplitter">
         <property name="frameShape">
          <enum>QFrame::Box</enum>
         </property>
         <property name="midLineWidth">
          <number>0</number>
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="opaqueResize">
          <bool>false</bool>
         </property>
         <property name="handleWidth">
          <number>11</number>
         </property>
         <widget class="QGroupBox" name="boxColorStream">
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
          <property name="baseSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
          <property name="title">
           <string>Color Stream</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_8">
           <item row="0" column="0">
            <widget class="QLabel" name="lbColorOut">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
         <widget class="QGroupBox" name="boxDepthStream">
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
          <property name="baseSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
          <property name="title">
           <string>Depth Stream</string>
          </property>
         </widget>
         <widget class="QGroupBox" name="boxSkeletonStream">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
          <property name="baseSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
          <property name="title">
           <string>Skeleton Stream</string>
          </property>
         </widget>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
      <property name="usesScrollButtons">
       <bool>false</bool>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="icon">
        <iconset>
         <normaloff>../../../../../../.designer/backup/icons/record.png</normaloff>../../../../../../.designer/backup/icons/record.png</iconset>
       </attribute>
       <attribute name="title">
        <string>Record</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="3">
         <widget class="QGroupBox" name="groupBox_3">
          <property name="title">
           <string>Skeleton Options</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_7">
           <item row="0" column="0">
            <widget class="QGroupBox" name="groupBox_5">
             <property name="title">
              <string>Joint Smoothing</string>
             </property>
             <layout class="QFormLayout" name="formLayout">
              <item row="2" column="0">
               <widget class="QLabel" name="label_2">
                <property name="text">
                 <string>Smoothing:</string>
                </property>
               </widget>
              </item>
              <item row="3" column="0">
               <widget class="QLabel" name="label_3">
                <property name="text">
                 <string>Correction:</string>
                </property>
               </widget>
              </item>
              <item row="4" column="0">
               <widget class="QLabel" name="label_4">
                <property name="text">
                 <string>Prediction:</string>
                </property>
               </widget>
              </item>
              <item row="5" column="0">
               <widget class="QLabel" name="label_5">
                <property name="text">
                 <string>JitterRadius:</string>
                </property>
               </widget>
              </item>
              <item row="6" column="0">
               <widget class="QLabel" name="label_6">
                <property name="text">
                 <string>MaxDeviationRadius:</string>
                </property>
               </widget>
              </item>
              <item row="2" column="1">
               <widget class="QDoubleSpinBox" name="spSmoothing">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="suffix">
                 <string>m</string>
                </property>
                <property name="decimals">
                 <number>3</number>
                </property>
                <property name="maximum">
                 <double>1.000000000000000</double>
                </property>
                <property name="singleStep">
                 <double>0.010000000000000</double>
                </property>
                <property name="value">
                 <double>0.500000000000000</double>
                </property>
               </widget>
              </item>
              <item row="3" column="1">
               <widget class="QDoubleSpinBox" name="spCorrection">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="suffix">
                 <string>m</string>
                </property>
                <property name="decimals">
                 <number>3</number>
                </property>
                <property name="maximum">
                 <double>1.000000000000000</double>
                </property>
                <property name="singleStep">
                 <double>0.010000000000000</double>
                </property>
                <property name="value">
                 <double>0.500000000000000</double>
                </property>
               </widget>
              </item>
              <item row="4" column="1">
               <widget class="QDoubleSpinBox" name="spPrediction">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="decimals">
                 <number>3</number>
                </property>
                <property name="singleStep">
                 <double>0.010000000000000</double>
                </property>
               </widget>
              </item>
              <item row="5" column="1">
               <widget class="QDoubleSpinBox" name="spJitter">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="prefix">
                 <string/>
                </property>
                <property name="suffix">
                 <string>m</string>
                </property>
                <property name="decimals">
                 <number>3</number>
                </property>
                <property name="singleStep">
                 <double>0.010000000000000</double>
                </property>
                <property name="value">
                 <double>0.050000000000000</double>
                </property>
               </widget>
              </item>
              <item row="6" column="1">
               <widget class="QDoubleSpinBox" name="spMaxDev">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="suffix">
                 <string>m</string>
                </property>
                <property name="decimals">
                 <number>3</number>
                </property>
                <property name="singleStep">
                 <double>0.010000000000000</double>
                </property>
                <property name="value">
                 <double>0.040000000000000</double>
                </property>
               </widget>
              </item>
              <item row="0" column="0">
               <widget class="QCheckBox" name="cbEnableSmoothing">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="text">
                 <string>Enable</string>
                </property>
                <property name="checked">
                 <bool>true</bool>
                </property>
               </widget>
              </item>
             </layout>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
        <item row="0" column="0">
         <widget class="QGroupBox" name="groupBox_4">
          <property name="layoutDirection">
           <enum>Qt::LeftToRight</enum>
          </property>
          <property name="title">
           <string>Capture Streams</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="1" column="1">
            <widget class="QLineEdit" name="leDepthOut">
             <property name="enabled">
              <bool>false</bool>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
            <widget class="QCheckBox" name="cbCaptureSkeleton">
             <property name="text">
              <string>Skeleton</string>
             </property>
             <property name="checked">
              <bool>true</bool>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <widget class="QLineEdit" name="leSkeletonOut">
             <property name="dragEnabled">
              <bool>false</bool>
             </property>
             <property name="clearButtonEnabled">
              <bool>false</bool>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
            <widget class="QCheckBox" name="cbCaptureDepth">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="text">
              <string>Depth</string>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
            <widget class="QLineEdit" name="leColorOut">
             <property name="enabled">
              <bool>false</bool>
             </property>
            </widget>
           </item>
           <item row="0" column="0">
            <widget class="QCheckBox" name="cbCaptureColor">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="text">
              <string>Color</string>
             </property>
            </widget>
           </item>
           <item row="0" column="2">
            <widget class="QPushButton" name="pbFileColor">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
               <width>25</width>
               <height>25</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>25</width>
               <height>25</height>
              </size>
             </property>
             <property name="text">
              <string>...</string>
             </property>
            </widget>
           </item>
           <item row="1" column="2">
            <widget class="QPushButton" name="pbFileDepth">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="maximumSize">
              <size>
               <width>25</width>
               <height>25</height>
              </size>
             </property>
             <property name="text">
              <string>...</string>
             </property>
            </widget>
           </item>
           <item row="2" column="2">
            <widget class="QPushButton" name="pbFileSkeleton">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="maximumSize">
              <size>
               <width>25</width>
               <height>25</height>
              </size>
             </property>
             <property name="text">
              <string>...</string>
             </property>
            </widget>
           </item>
           <item row="3" column="1">
            <widget class="QPushButton" name="pbRecord">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="text">
              <string>Record</string>
             </property>
             <property name="icon">
              <iconset>
               <normaloff>icons/record.png</normaloff>icons/record.png</iconset>
             </property>
             <property name="checkable">
              <bool>true</bool>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
        <item row="0" column="2">
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>Scene Config</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_6">
           <item row="1" column="0">
            <widget class="QGroupBox" name="groupBox_2">
             <property name="title">
              <string>Log Level</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_5">
              <item row="0" column="0">
               <widget class="QComboBox" name="cbLogLevel">
                <property name="currentIndex">
                 <number>3</number>
                </property>
                <property name="modelColumn">
                 <number>0</number>
                </property>
                <item>
                 <property name="text">
                  <string>trace - 0</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>debug - 1</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>info - 2</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>warn - 3</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>err - 4</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>critical - 5</string>
                 </property>
                </item>
                <item>
                 <property name="text">
                  <string>off - 6</string>
                 </property>
                </item>
               </widget>
              </item>
             </layout>
            </widget>
           </item>
           <item row="0" column="1">
            <widget class="QLineEdit" name="leConnectionId"/>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label">
             <property name="text">
              <string>Kinect Connection Id:</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <widget class="QPushButton" name="pbGenerateConfig">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="text">
              <string>Generate Config</string>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <widget class="QPushButton" name="pbConnect">
             <property name="text">
              <string>Connect</string>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
        <string>Play</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
        <item row="4" column="0">
         <widget class="QGroupBox" name="gbFrames">
          <property name="title">
           <string>Frames</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
           <item row="0" column="0">
            <widget class="QSlider" name="hsFrames">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout_2">
             <item>
              <widget class="QLabel" name="labelFramesFrom">
               <property name="text">
                <string>0</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QLabel" name="labelFramesUntil">
               <property name="text">
                <string>-1</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
               </property>
              </widget>
             </item>
            </layout>
           </item>
           <item row="0" column="1">
            <widget class="QPushButton" name="pbPlaySkeleton">
             <property name="enabled">
              <bool>false</bool>
             </property>
             <property name="text">
              <string>Play</string>
             </property>
             <property name="checkable">
              <bool>true</bool>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
        <item row="3" column="0">
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <property name="topMargin">
           <number>0</number>
          </property>
          <item>
           <widget class="QLineEdit" name="leSkeletonIn">
            <property name="text">
             <string>Skeleton.kif</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="pbPlaySkeletonPath">
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item row="3" column="1">
         <widget class="QPushButton" name="pbLoad">
          <property name="text">
           <string>Load</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>cbCaptureDepth</sender>
   <signal>toggled(bool)</signal>
   <receiver>leDepthOut</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>111</x>
     <y>526</y>
    </hint>
    <hint type="destinationlabel">
     <x>248</x>
     <y>527</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbCaptureSkeleton</sender>
   <signal>toggled(bool)</signal>
   <receiver>leSkeletonOut</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>94</x>
     <y>589</y>
    </hint>
    <hint type="destinationlabel">
     <x>246</x>
     <y>590</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbCaptureSkeleton</sender>
   <signal>toggled(bool)</signal>
   <receiver>pbFileSkeleton</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>103</x>
     <y>589</y>
    </hint>
    <hint type="destinationlabel">
     <x>287</x>
     <y>592</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbCaptureDepth</sender>
   <signal>toggled(bool)</signal>
   <receiver>pbFileDepth</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>111</x>
     <y>526</y>
    </hint>
    <hint type="destinationlabel">
     <x>287</x>
     <y>529</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbCaptureColor</sender>
   <signal>toggled(bool)</signal>
   <receiver>leColorOut</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>111</x>
     <y>463</y>
    </hint>
    <hint type="destinationlabel">
     <x>245</x>
     <y>464</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbCaptureColor</sender>
   <signal>toggled(bool)</signal>
   <receiver>pbFileColor</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>111</x>
     <y>463</y>
    </hint>
    <hint type="destinationlabel">
     <x>287</x>
     <y>466</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbEnableSmoothing</sender>
   <signal>toggled(bool)</signal>
   <receiver>spSmoothing</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>748</x>
     <y>445</y>
    </hint>
    <hint type="destinationlabel">
     <x>881</x>
     <y>491</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbEnableSmoothing</sender>
   <signal>toggled(bool)</signal>
   <receiver>spCorrection</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>770</x>
     <y>450</y>
    </hint>
    <hint type="destinationlabel">
     <x>892</x>
     <y>517</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbEnableSmoothing</sender>
   <signal>toggled(bool)</signal>
   <receiver>spPrediction</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>756</x>
     <y>447</y>
    </hint>
    <hint type="destinationlabel">
     <x>883</x>
     <y>545</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbEnableSmoothing</sender>
   <signal>toggled(bool)</signal>
   <receiver>spJitter</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>764</x>
     <y>444</y>
    </hint>
    <hint type="destinationlabel">
     <x>867</x>
     <y>569</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cbEnableSmoothing</sender>
   <signal>toggled(bool)</signal>
   <receiver>spMaxDev</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>743</x>
     <y>454</y>
    </hint>
    <hint type="destinationlabel">
     <x>872</x>
     <y>604</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
